# rmvi

./: .gitignore  CMakeLists.txt  README.md  README.txt  picture2svg.py  picture2svg_Chat.ipynb  ryan_jupyter.csv  svg2pos.py
.cache/clangd/index/: cgltf.h.C78A25E1F489D6F8.idx  config.h.EA1CC2910893E5DE.idx  context.c.D907E29114954F13.idx  dirent.h.537A544BFE0695B6.idx  dr_mp3.h.E100C568AD1AF390.idx  dr_wav.h.745FB4B09FE414D0.idx  egl_context.c.EE3F0DEA28B3D79D.idx  ffmpeg.h.E157BC2091DE60BA.idx  ffmpeg_windows.c.7B92102022CF0661.idx  glad.h.40643E868C050B7C.idx  glfw3.h.4905115B15DF570C.idx  glfw3native.h.B5BA4361A20C2CFF.idx  init.c.E4FE90A9EF9CA487.idx  input.c.4B526EBE5FF465F5.idx  internal.h.1F3D9FA39A6B29B8.idx  jar_mod.h.6A0ACE4C45FCADA7.idx  jar_xm.h.C149D27E65468165.idx  m3d.h.1DA3CC9FB7347574.idx  main.c.4876C40A7C9CD970.idx  mappings.h.93D7416450D46D10.idx  miniaudio.h.6F4000841ED5A723.idx  monitor.c.900E6387C4FD2320.idx  msf_gif.h.37C3BD151DCFCD0E.idx  null_init.c.56D697728F63B2EE.idx  null_joystick.c.F3877ADBB7BEC776.idx  null_joystick.h.8DFA1E109FF94EEC.idx  null_monitor.c.650A5EC8610B426E.idx  null_platform.h.F77B93A934609325.idx  null_window.c.B31EA569EEFA6148.idx  osmesa_context.c.529813AD49CD61B6.idx  par_shapes.h.4790A5A874E7E0A3.idx  platform.c.4D361C6DE4B50E25.idx  platform.h.12AE31C7A8ECC681.idx  qoa.h.5ECA08781E8F4C33.idx  qoaplay.c.02DAFC94610FFC50.idx  qoi.h.FF7902178145EAF0.idx  raudio.c.F309EEE5D6E1F409.idx  raylib.h.9E2AEFBF84ABA302.idx  raymath.h.8F75296AE0324E9B.idx  rcamera.h.DD71E342DB963326.idx  (+40 more)
audio/keyboard/: audio.c
include/: audio.h  ffmpeg.h  fft_wrapper.h  fluid_seb.h  rmviMath.h  text2Latex.h  visual.h
python/: picture2svg.ipynb  svg2pos.py
src/: CMakeLists.txt  audio.c  ffmpeg_windows.c  fft_wrapper.cpp  fluid_seb.c  main.c  physics.c  svg2position.py  text2Latex.c  visual.c
video/: CMakeLists.txt  config.h  minimal.txt
video/element/: CMakeLists.txt  element.c
video/element/Image/: pilone_grec.json
video/fourier/: CMakeLists.txt  fourier.c
video/jean/: CMakeLists.txt  jean.c  presentation.txt
video/jean/output/: test.txt
video/markov/: CMakeLists.txt  markov.c
video/solarSystem/: CMakeLists.txt  diffEarth.c  micro.txt  planets.json  presentation.txt  solarSystem.c  sunEarth.json  text.txt
video/solarSystem/Image/earth/: earth.mtl
video/solarSystem/Image/jupiter/: jupiter.mtl
video/solarSystem/Image/mercure/: mercury.mtl
video/solarSystem/Image/rock/: rock.mtl
video/solarSystem/Image/saturn/: 13906_Saturn_v1_l3.mtl  saturn.mtl
video/solarSystem/Image/venus/: venus.mtl  venus_atm.mtl  venus_surface.mtl
video/solarSystem/output/: 1.pkf
